a6.9.2